@@ -1,13 +1,13 @@
 package me.desht.modularrouters.datagen;
 
-import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
 import me.desht.modularrouters.core.ModBlockEntities;
 import me.desht.modularrouters.core.ModBlocks;
 import net.minecraft.data.DataGenerator;
-import net.minecraft.data.loot.BlockLoot;
+import net.minecraft.data.loot.BlockLootSubProvider;
 import net.minecraft.data.loot.LootTableProvider;
 import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.flag.FeatureFlagSet;
+import net.minecraft.world.flag.FeatureFlags;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.ShulkerBoxBlock;
 import net.minecraft.world.level.storage.loot.LootPool;
@@ -18,29 +18,21 @@ import net.minecraft.world.level.storage.loot.entries.LootItem;
 import net.minecraft.world.level.storage.loot.functions.CopyNameFunction;
 import net.minecraft.world.level.storage.loot.functions.CopyNbtFunction;
 import net.minecraft.world.level.storage.loot.functions.SetContainerContents;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParamSet;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
 import net.minecraft.world.level.storage.loot.predicates.ExplosionCondition;
 import net.minecraft.world.level.storage.loot.providers.nbt.ContextNbtProvider;
 import net.minecraft.world.level.storage.loot.providers.number.ConstantValue;
+import net.minecraftforge.fml.common.Mod;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.function.BiConsumer;
-import java.util.function.Consumer;
-import java.util.function.Supplier;
+import java.util.Set;
 
 public class ModLootTableProvider extends LootTableProvider {
     public ModLootTableProvider(DataGenerator dataGeneratorIn) {
-        super(dataGeneratorIn);
-    }
-
-    @Override
-    protected List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>> getTables() {
-        return ImmutableList.of(
-                Pair.of(BlockLootTable::new, LootContextParamSets.BLOCK)
-        );
+        super(dataGeneratorIn.getPackOutput(), Set.of(), List.of(
+                new LootTableProvider.SubProviderEntry(ModularRoutersBlockLoot::new, LootContextParamSets.BLOCK)
+        ));
     }
 
     @Override
@@ -48,9 +40,18 @@ public class ModLootTableProvider extends LootTableProvider {
         // TODO
     }
 
-    private static class BlockLootTable extends BlockLoot {
+    private static class ModularRoutersBlockLoot extends BlockLootSubProvider {
+        public ModularRoutersBlockLoot() {
+            super(Set.of(), FeatureFlags.DEFAULT_FLAGS);
+        }
+
         @Override
-        protected void addTables() {
+        protected Iterable<Block> getKnownBlocks() {
+            return List.of(ModBlocks.MODULAR_ROUTER.get());
+        }
+
+        @Override
+        protected void generate() {
             Block router = ModBlocks.MODULAR_ROUTER.get();
             LootPool.Builder builder = LootPool.lootPool()
                     .name(ModBlocks.MODULAR_ROUTER.getId().getPath())
@@ -65,11 +66,6 @@ public class ModLootTableProvider extends LootTableProvider {
                             .apply(SetContainerContents.setContents(ModBlockEntities.MODULAR_ROUTER.get())
                                     .withEntry(DynamicLoot.dynamicEntry(ShulkerBoxBlock.CONTENTS))));
             add(router, LootTable.lootTable().withPool(builder));
-        }
-
-        @Override
-        protected Iterable<Block> getKnownBlocks() {
-            return Collections.singletonList(ModBlocks.MODULAR_ROUTER.get());
         }
     }
 }
